--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          platforms: ${{ env.ARCH }}
+          platforms: ${{ env.PLATFORM }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
