[bot] Updating indices

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -107,6 +107,7 @@ jobs:
       - name: Checkout to temp folder
         uses: actions/checkout@v4
         with:
+          ref: main
           path: temp
 
       - name: Check wheels created
