Wrong image name

--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -19,7 +19,7 @@ jobs:
           for DISTRO in ${DISTROS}; do
             IMAGE=$(echo ${DISTRO} | awk -F'-' '{print $1}')
             TAG=$(echo ${DISTRO} | awk -F'-' '{print $2}')
-            docker run -d --rm --name ${DISTRO} ghcr.io/chukysoria/baseimage-${DISTRO}
+            docker run -d --rm --name ${DISTRO} ghcr.io/chukysoria/baseimage-${IMAGE}:{TAG}
             docker ps
             docker exec ${DISTRO} bash -c "\
               if [ -f /usr/bin/apt ]; then \
