--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -21,6 +21,7 @@ jobs:
             TAG=$(echo ${DISTRO} | awk -F'-' '{print $2}')
             docker run -d --rm --name ${DISTRO} ghcr.io/chukysoria/baseimage-${IMAGE}:${TAG}
             docker ps
+            sleep 10
             docker exec ${DISTRO} bash -c "\
               if [ -f /usr/bin/apt ]; then \
                 apt-get update && apt-get install -y python3-venv; \
