--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Export packages and distros
         run: |
           tr '\n' ' ' < packages.txt > packages-clean.txt
-          tr '\n' ',' < distros.txt > distros-clean.txt
+          paste -d, -s distros.txt > distros-clean.txt
           echo "ALLPACKAGES=$(cat packages-clean.txt)" >> $GITHUB_ENV
           echo "TAGS=[$(sed -r 's/-/:/g' distros-clean.txt)]" >> $GITHUB_ENV
     outputs:
