--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -14,10 +14,8 @@ jobs:
       
       - name: Export packages and distros
         run: |
-          tr '\n' ' ' < packages.txt > packages-clean.txt
-          paste -d, -s distros.txt > distros-clean.txt
-          echo "ALLPACKAGES=$(cat packages-clean.txt)" >> $GITHUB_ENV
-          echo "TAGS=[$(sed -r 's/-/:/g' distros-clean.txt)]" >> $GITHUB_ENV
+          echo "ALLPACKAGES=$( tr '\n' ' ' < packages.txt)" >> $GITHUB_ENV
+          echo "TAGS=$((sed -r 's/-/:/g' | jq -R -s -c 'split("\n")') < distros.txt )" >> $GITHUB_ENV
     outputs:
       ALLPACKAGES: ${{ env.ALLPACKAGES }}
       TAGS: ${{ env.TAGS }}
@@ -28,7 +26,7 @@ jobs:
     container: ghcr.io/chukysoria/baseimage-${{ matrix.DISTRO }}
     strategy:
       matrix:
-        TAGS: ${{ needs.get-variables.outputs.TAGS }}
+        TAGS: ${{ fromJson(needs.get-variables.outputs.TAGS) }}
 
     steps:
       - name: Check out repo
