--- a/.github/workflows/wheelie_scheduler.yml
+++ b/.github/workflows/wheelie_scheduler.yml
@@ -1,8 +1,8 @@
 name: Wheelie Scheduler
 
 on:
-  #schedule:
-  #  - cron:  '00 * * * *'
+  schedule:
+    - cron:  '00 1 * * *'
   workflow_dispatch:
 
 jobs:
